<resources>
    <string name="app_name">CAudit</string>
    <string name="logoname">C-Audit</string>
    <string name="loginbtn">Login</string>
    <string name="welcomemessage">Welcome To C-Audit</string>
    <string name="version">CssV- 1.0 \n\n www.cssindia.in</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="daily_visit">Daily Visit Report</string>
    <string name="srm_report">Other Report</string>
    <string name="audited">Audited</string>
    <string name="unaudited">UnAdudited</string>
    <string name="sync">Sync to Server</string>
    <string name="ct_webservice_link">http://www.cleartask.in/caudit_weblink/WebServices/SaveCTVisitData.aspx</string>
    <string name="daily_visit_hindi">दैनिक रिपोर्ट</string>
    <string name="srm_report_hindi">अन्य रिपोर्ट</string>
    <string name="audited_hindi">लेखा परीक्षित</string>
    <string name="unaudited_hindi">बिना जाँचा</string>
    <string name="sync_hindi">सर्वर पर अपलोड</string>
    <string name="ct_hk">CT/HK</string>
    <string name="srm">SRM</string>
    <string name="tis">TIS</string>
    <string name="ebill">E-Bill</string>
    <string name="ct_hk_hindi">सी टी/एच</string>
    <string name="srm_hindi">एसआरएम</string>
    <string name="tis_hindi">टी आई एस</string>
    <string name="ebill_hindi">ई बिल</string>
    <string name="title_activity_caretaker__housekeeping">Caretaker_Housekeeping</string>
    <string-array name="ct_question">
        <item>1.is CT present at site?</item>
        <item>2.is CT wearing ID card?</item>
        <item>3.is CT wearing proper uniform?</item>
        <item>4.CT telephone working?</item>
        <item>5.is CT chair available at site?</item>
        <item>6.is CT working for more than 12hrs at stretch?</item>
        <item>7.All mandatory registers and Logbook are maintained?</item>
        <item>8.Does CT know where to deposit cash and cheque?</item>
        <item>9.Does CT politely help customer with use of ATM?</item>
        <item>10.Does CT ensure only one person per ATM machine?</item>
        <item>11.Important numbers are displayed in the ATM?</item>
        <item>12.Is the ATM down due to any major problem</item>
    </string-array>
    <string-array name="ct_questions_hindi">
        <item>1.क्या साइट पर केअरटेकर मौजूद है ?</item>
        <item>2.केअरटेकर आईडी कार्ड पहने हुए है?</item>
        <item>3.केअरटेकर उचित यूनिफॉर्म पहने हुए है?</item>
        <item>4.केअरटेकर का टेलीफोन काम कर रहा है ?</item>
        <item>5.साइट पर कुर्सी उपलब्ध है ?</item>
        <item>6.क्या केअरटेकर १२ घंटे से अधिक समय तक काम कर रहा है ?</item>
        <item>7.सभी अनिवार्य रजिस्टर साइट पर रखे है ?</item>
        <item>8.क्या केअरटेकर को पता है की,नकद और चेक कहा जमा करना है?</item>
        <item>9.क्या केअरटेकर विनम्रता से एटीएम के उपयोग मे ग्राहकों की मदद करता है?</item>
        <item>10.क्या केअरटेकर , एटीएम में केवल एक व्यक्ति है यह सुनिश्चित करता है?</item>
        <item>11.महत्वपूर्ण नंबर एटीएम में प्रदर्शित हैं ?</item>
        <item>12.एटीएम किसी भी प्रमुख समस्या की वजह से बंद है?</item>
    </string-array>
    <string-array name="CT_YES_Q2">
        <item>ID expired</item>
        <item>ID is valid</item>
    </string-array>
    <string-array name="hk_question">
        <item>Q1.Signage/Lollypop clean?</item>
        <item>Q2.Stains on main door,side glass and floor machine?</item>
        
        <item>Q3.Is ATM machine clean?</item>
        <item>Q4.Is ATM floor clean?</item>
        <item>Q5.Is doormat and dustbin clean?</item>
        <item>Q6.Is ceiling and cobweb clean?</item>
        <item>Q7.Insect present in fitted Ceiling lights?</item>
        <item>Q8.Stain on left hand side and right hand side wall?</item>
        <item>Q9.Dust behind poster frame and brochure holder?</item>
        <item>Q10.Dust on fire extinguisher?</item>
        

        <item>Q11.Dust on AC?</item>
        <item>Q12.Dust on UPS and battery?</item>
        <item>Q13.Is backroom floor and partition clean?</item>
        <item>Q14.Is backroom ceiling clean?</item>

        <item>Q15.Housekeeping material available at site?</item>

        <item>Q16.Deep-cleaning done?</item>
        <item>Q17.Pest-control done?</item>


    </string-array>
    <string-array name="hk_questions_hindi">
        <item>Q1.साइनेज / लोलीपोप बोर्ड साफ है?</item>
        <item>Q2.मेन दरवाजा,साइड ग्लास और फ्लोर मशीन पे दाग है?</item>

        <item>Q3.क्या एटीएम मशीन साफ है? </item>
        <item>Q4.क्या एटीएम फ्लोर साफ है?</item>
        <item>Q5.क्या डोरमॅट और डस्टबिन साफ है?</item>
        <item>Q6.क्या छत और मकड़ी का जाला साफ है?</item>
        <item>Q7.छत की लाइट्स मे किटक मौजूद है?</item>
        <item>Q8.क्या दायी और बायी दीवार पर दाग है?</item>
        <item>Q9.क्या पोस्टर फ्रेम के पीछे और ब्रोचर होल्डर पर धूल है?</item>
        <item>Q10.क्या फायर बॉटल पर धूल है?</item>
        <item>Q11.क्या एसी पर धूल या गंदगी है?</item>
        <item>Q12.क्या यूपीएस और बैटरी पर धूल या गंदगी है?</item>
        <item>Q13.क्या बॅकरूम फ्लोर और पारटिशन साफ है?</item>
        <item>Q14.बॅकरूम की छत साफ है?</item>

        <item>Q15.सफाई का समान मौजूद है?</item>

        <item>Q16.डीप क्लीनिंग हुई है?</item>
        <item>Q17.पेस्ट कंट्रोल हुआ है?</item>

    </string-array>
    <string-array name="HK_NO_Q1">
        <item>Proper cleaning require-It is on height-Flex damaged-Other</item>

    </string-array>
    <string-array name="HK_YES_Q2">
        <item>Side Glass-Floor machine-Main door-Other</item>

    </string-array>
    <string-array name="HK_NO_Q3">
        <item>Proper cleaning require-Other</item>

    </string-array>
    <string-array name="HK_NO_Q4">
        <item>Floor damaged-Proper cleaning require-Other</item>

    </string-array>
    <string-array name="HK_NO_Q5">
        <item>Doormat not available-Dustbin not available-Other</item>

    </string-array>
    <string-array name="HK_NO_Q6">
        <item>Leakage spot-Proper cleaning-require-Ladder require-Other</item>

    </string-array>
    <string-array name="HK_NO_Q7">
        <item>Proper cleaning require-Ladder require-Other</item>

    </string-array>
    <string-array name="HK_YES_Q8">
        <item>Painting require-Wall damaged-Proper cleaning require-Other</item>

    </string-array>
    <string-array name="HK_YES_Q9">
        <item>Proper cleaning require-Poster frame not available-Brochure holder not available-Other</item>
    </string-array>
    <string-array name="HK_YES_Q10">
        <item>Proper cleaning require-Fire bottle not available-Other</item>

    </string-array>
    <string-array name="HK_NO_Q11">
        <item>Proper cleaning require-AC not available-Other</item>

    </string-array>
    <string-array name="HK_NO_Q12">
        <item>Proper cleaning require-Open wiring-Other</item>

    </string-array>
    <string-array name="HK_NO_Q13">
        <item>Backroom key not available-Proper cleaning require-Bank or CRA material available-Other</item>

    </string-array>
    <string-array name="HK_NO_Q14">
        <item>Backroom key not available-Proper cleaning require-Bank or CRA material available-Other</item>

    </string-array>
    <string-array name="HK_NO_Q15">
        <item>Phenyl not available-Collin not available-Broom not available-Duster not available-Other</item>

    </string-array>
    <string-array name="SRM_Questions">
        <item>Q1.Main signage board is working?</item>
        <item>Q2.Main signage board is in good condition?</item>
        <item>Q3.Lollipop/Visa board is working?</item>
        <item>Q4.Lollipop/Visa board is in good condition</item>
        <item>Q5.Shutter and shutter box are in good condition</item>
        <item>Q6.Main door is working properly?</item>
        <item>Q7.Flooring tiles are in good condition?</item>
        <item>Q8.Walls/Paneling are in good condition?</item>
        <item>Q9.Ceiling/POP are in good condition?</item>
        <item>Q10.Any seepage/water leakage from above at ATM site?</item>
        <item>Q11.All Electrical appliances (CFL/PL/Tubes/Bulbs/Exhaust Fan) are working?</item>
        <item>Q12.All AC are working and cooling properly?</item>
        <item>Q13.Is writing ledge/Cheque drop box are in good conditions?</item>
        <item>Q14.Backroom door is working properly?</item>
        <item>Q15.Is fire extinguisher working (Green indicator) ?</item>
        <item>Q16.Is UPS providing more than 1 hr backup during power failure?</item>
        <item>Q17.Is Genset available at site with proper connections?</item>

    </string-array>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="na">NA</string>
    <string name="next">NEXT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listsearchhint">Enter ATM ID/Address</string>
    <string name="photomenu">Photograph Menu</string>
    <string name="ctphoto1text1">Caretaker photo complete uniform and Id</string>
    <string name="ctphoto1text2">Front signage,chair with caretaker</string>
    <string name="ctphoto1text3">Opened Registers photo</string>
    <string name="ctphoto1Hinditext1">यूनिफॉर्म और आईडी कार्ड के साथ केअरटेकर का फोटो</string>
    <string name="ctphoto1Hinditext2">मेन साइनेज,कुर्सी के साथ केअरटेकर का फोटो</string>
    <string name="ctphoto1Hinditext3">खुले हुए रजिस्टर का फोटो</string>
    <string name="hkphototext1">*Front signage with main door view</string>
    <string name="hkphototext2">*ATM machine top view</string>
    <string name="hkphototext3">*ATM machine with doormat and dustbin view</string>
    <string name="hkphototext4">*Floor view</string>
    <string name="hkphototext5">*Right wall view</string>
    <string name="hkphototext6">*Left wall view</string>
    <string name="hkphototext7">*Ceiling view</string>
    <string name="hkphototext8">AC (indoor) unit view</string>
    <string name="hkphototext9">Fire extinguisher view</string>
    <string name="hkphototext10">Backroom floor with HK materials view</string>
    <string name="hkphototext11">Backroom ceiling view</string>
    <string name="hkphototextHindi1">*मेन साइनेज के साथ दरवाजे का दृश्य</string>
    <string name="hkphototextHindi2">*एटीएम मशीन के उपर का दृश्य</string>
    <string name="hkphototextHindi3">*एटीएम मशीन के साथ डोरमॅट और डस्टबिन का दृश्य</string>
    <string name="hkphototextHindi4">*फ्लोर का दृश्य</string>
    <string name="hkphototextHindi5">*दायी तरफ की दीवार का दृश्य</string>
    <string name="hkphototextHindi6">*बायी तरफ की दीवार का दृश्य</string>
    <string name="hkphototextHindi7">*छत का दृश्य</string>
    <string name="hkphototextHindi8">एसी(इनडोर) यूनिट दृश्य</string>
    <string name="hkphototextHindi9">फायर बॉटल दृश्य</string>
    <string name="hkphototextHindi10">बॅकरूम के साथ सफाई के समान का दृश्य</string>
    <string name="hkphototextHindi11">बॅकरूम की छत का दृश्य</string>
    <string name="srmphototext1">*SRM issue 1</string>
    <string name="srmphototext2">SRM issue 2</string>
    <string name="srmphototext3">SRM issue 3</string>
    <string name="srmphototext4">SRM issue 4</string>
    <string name="srmphototext5">SRM issue 5</string>
    <string name="srmphototext6">SRM issue 6</string>
    <string name="residentAddress">Resident Address</string>
    <string name="permanentAddress">Permanent Address</string>
    <string name="sameAddress">Permanent Address same as Resident Address</string>
    <string name="officialdetails">Official Details</string>
    <string name="biodata">Bio Data</string>
    <string name="declaration">Declaration</string>
    <string name="sign">Sign</string>
    <string name="passportSizePhoto">Passport Size Photo</string>
    <string name="moreDocuments">More Documents</string>
    <string name="ctNameNo">CT Name and No</string>
    <string name="hkNameNo">HK Name and No</string>
</resources>