<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.spottechnicians.caudit.ModuleHK.PhotoOfHK">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHKPhotoHeading"
            style="@style/photoMenuHeading" />

        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivHkPhoto1"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@drawable/template"

                />

            <TextView
                android:id="@+id/tvHKPhoto1"
                style="@style/photoMenuTV"
                android:text="@string/hkphototext1" />


        </LinearLayout>

        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivHkPhoto2"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@drawable/template"

                />

            <TextView
                android:id="@+id/tvHKPhoto2"
                style="@style/photoMenuTV"
                android:text="@string/hkphototext2" />


        </LinearLayout>

        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivHkPhoto3"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@drawable/template" />

            <TextView
                android:id="@+id/tvHKPhoto3"
                style="@style/photoMenuTV"

                android:text="@string/hkphototext3" />


        </LinearLayout>


        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivHkPhoto4"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@drawable/template"

                />

            <TextView
                android:id="@+id/tvHKPhoto4"
                style="@style/photoMenuTV"
                android:text="@string/hkphototext4" />


        </LinearLayout>

        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivHkPhoto5"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@drawable/template"

                />

            <TextView
                android:id="@+id/tvHKPhoto5"
                style="@style/photoMenuTV"
                android:text="@string/hkphototext5" />


        </LinearLayout>

        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivHkPhoto6"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@drawable/template" />

            <TextView
                android:id="@+id/tvHKPhoto6"
                style="@style/photoMenuTV"
                android:text="@string/hkphototext6" />


        </LinearLayout>


        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivHkPhoto7"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@drawable/template"

                />

            <TextView
                android:id="@+id/tvHKPhoto7"
                style="@style/photoMenuTV"
                android:text="@string/hkphototext7" />


        </LinearLayout>

        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivHkPhoto8"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@drawable/template"

                />

            <TextView
                android:id="@+id/tvHKPhoto8"
                style="@style/photoMenuTV"
                android:text="@string/hkphototext8" />


        </LinearLayout>

        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivHkPhoto9"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@drawable/template" />

            <TextView
                android:id="@+id/tvHKPhoto9"
                style="@style/photoMenuTV"
                android:text="@string/hkphototext9" />


        </LinearLayout>


        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivHkPhoto10"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@drawable/template"

                />

            <TextView
                android:id="@+id/tvHKPhoto10"
                style="@style/photoMenuTV"
                android:text="@string/hkphototext10" />


        </LinearLayout>

        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivHkPhoto11"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@drawable/template"

                />

            <TextView
                android:id="@+id/tvHKPhoto11"
                style="@style/photoMenuTV"
                android:text="@string/hkphototext11" />


        </LinearLayout>


        <EditText
            android:id="@+id/etCtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Housekeeper Name"
            android:inputType="textPersonName"
            android:maxLength="25" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etCtNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number"
                android:inputType="phone"
                android:maxLength="10" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSave"
                android:text="Save" />

            <Button
                android:id="@+id/btnUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onUpload"
                android:text="Upload" />

        </LinearLayout>


        <!--  <Button
              android:id="@+id/btnCTPhotoNext"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:onClick="next"
              android:text="@string/next" />-->

    </LinearLayout>

</ScrollView>
