<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.spottechnicians.caudit.ModuleSRM.PhotoOfSRM">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSRMPhotoHeading"
            style="@style/photoMenuHeading" />

        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivSrmPhoto1"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@drawable/ic_template"

                />

            <TextView
                android:id="@+id/tvSRMPhoto1"
                style="@style/photoMenuTV"
                android:text="@string/srmphototext1" />


        </LinearLayout>


        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivSrmPhoto2"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@drawable/ic_template"

                />

            <TextView
                android:id="@+id/tvSRMPhoto2"
                style="@style/photoMenuTV"
                android:text="@string/srmphototext2" />


        </LinearLayout>

        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivSrmPhoto3"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@drawable/ic_template" />

            <TextView
                android:id="@+id/tvSRMPhoto3"
                style="@style/photoMenuTV"
                android:text="@string/srmphototext3" />


        </LinearLayout>


        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivSrmPhoto4"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@drawable/ic_template"

                />

            <TextView
                android:id="@+id/tvSRMPhoto4"
                style="@style/photoMenuTV"
                android:text="@string/srmphototext4" />


        </LinearLayout>

        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivSrmPhoto5"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@drawable/ic_template"

                />

            <TextView
                android:id="@+id/tvSRMPhoto5"
                style="@style/photoMenuTV"
                android:text="@string/srmphototext5" />


        </LinearLayout>


        <LinearLayout style="@style/photomeuLL">

            <ImageView
                android:id="@+id/ivSrmPhoto6"
                style="@style/photoMenuIV"
                android:onClick="imageClicked"
                android:src="@drawable/ic_template"

                />

            <TextView
                android:id="@+id/tvSRMPhoto6"
                style="@style/photoMenuTV"
                android:text="@string/srmphototext6" />


        </LinearLayout>


        <EditText
            android:id="@+id/etCtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Caretaker/Housekeeper Name"
            android:inputType="textPersonName"
            android:maxLength="25" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etCtNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone Number"
                android:inputType="phone"
                android:maxLength="10" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSave"
                android:text="Save" />

            <Button
                android:id="@+id/btnUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onUpload"
                android:text="Upload" />

        </LinearLayout>


        <!--
                <Button
                    android:id="@+id/btnCTPhotoNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="next"
                    android:text="@string/next" />-->

    </LinearLayout>
</ScrollView>
